add user initiative logic for question on type and size of pizza

--- a/dev/data/nlu/nlu_pizza_order.yml
+++ b/dev/data/nlu/nlu_pizza_order.yml
@@ -57,14 +57,8 @@ nlu:
     - want to oder [large](pizza_size) [cheese](pizza_type) pizza
     - want to order [medium](pizza_size) [pepp](pizza_type) pizza
     - give me a [small](pizza_size) [margherita](pizza_type) and a [large](pizza_size) [pepperoni](pizza_type) one
-    - can I get a size [m](pizza_size) [funghi](pizza_type), a [family-size](pizza_size) [prosciutto](pizza_type) [and](multiple_order_flag) a [diavola](pizza_type)
-### - QWERT [small]{"entity": "pizza_size", "group": "1"} [funghi]{"entity": "pizza_type", "group": "1"}
-###    - Give me a [small]{"entity": "pizza_size", "group": "1"} [margherita]{"entity": "pizza_type", "group": "1"} and a [large]{"entity": "pizza_size", "group": "2"} [pepperoni]{"entity": "pizza_type", "group": "2"} one
-###    - Can I get a size [m]{"entity": "pizza_size", "group": "1"} [funghi]{"entity": "pizza_type", "group": "1"} and a [family-size]{"entity": "pizza_size", "group": "2"} [prosciutto]{"entity": "pizza_type", "group": "2"}
-###    - I'd like a [big]{"entity": "pizza_size", "group": "1"} sized [veggie]{"entity": "pizza_type", "group": "1"} and a [large]{"entity": "pizza_size", "group": "2"} [diavola]{"entity": "pizza_type", "group": "2"} pizza please
-###    - For the first order, give me a [huge]{"entity": "pizza_size", "group": "1"} [vegetariana]{"entity": "pizza_type", "group": "1"}. Then, for the second order, a [medium]{"entity": "pizza_size", "group": "2"} [prosciutto]{"entity": "pizza_type", "group": "2"} and finally, a [family-size]{"entity": "pizza_size", "group": "3"} [margherita]{"entity": "pizza_type", "group": "3"}
-###    - I'd like a [small]{"entity": "pizza_size", "group": "1"} [funghi]{"entity": "pizza_type", "group": "1"}, a [large]{"entity": "pizza_size", "group": "2"} [pepperoni]{"entity": "pizza_type", "group": "2"}, and a [medium]{"entity": "pizza_size", "group": "3"} [diavola]{"entity": "pizza_type", "group": "3"}
-### I'd like a small funghi, a large pepperoni and a medium diavola
+    - can I get a size [m](pizza_size) [funghi](pizza_type), a [family-size](pizza_size) [prosciutto](pizza_type) and a [diavola](pizza_type)
+
 
 - intent: add_more_pizza
   examples: |
@@ -73,3 +67,26 @@ nlu:
     - i want to add a pizza
     - more pizza
     - another one
+
+- intent: what_pizza_you_have
+  examples: |
+    - what types do you have
+    - tell me the types
+    - what types
+    - what are the types you offer
+    - what do you offer
+
+- intent: what_size_you_have
+  examples: |
+    - what sizes do you have
+    - what sizes do you offer
+    - what sizes are available
+    - tell me your size offers
+    - what size is [small](pizza_size)
+    - what size is [small](pizza_size)
+
+
+#TODO: questions on pizza ordering like do you have a certain pizza type etc
+#TODO: include the specific questions in new intent
+
+    
