--- a/dev/data/rules/rules_pizza_order.yml
+++ b/dev/data/rules/rules_pizza_order.yml
@@ -8,10 +8,10 @@ rules:
     - intent: buy_pizza
   - action: pizza_order_form
   - active_loop: pizza_order_form
-  - slot_was_set:
-    - requested_slot: pizza_type
-  - slot_was_set:
-    - requested_slot: pizza_size
+  # - slot_was_set:
+  #   - requested_slot: pizza_type
+  # - slot_was_set:
+  #   - requested_slot: pizza_size   
     
 
 #### sumit pizza order form by adding all to total_order, ask for more orders
@@ -23,12 +23,11 @@ rules:
   - active_loop: null
   - slot_was_set:
     - requested_slot: null
-    - multiple_order_flag: null
   - action: action_total_order_add
   - action: utter_anything_else
 
 
-  #### continues the form after bot challange
+#### continues the form after bot challange
 - rule: Interruption in Pizza Form
   condition:
   # Condition that form is active.
@@ -38,6 +37,16 @@ rules:
   - intent: faq
   - action: utter_faq
   # Return to form after handling the faq intent
+  - action: pizza_order_form
+  - active_loop: pizza_order_form
+
+####  interrupts the normal flow with telling the pizza sizes
+- rule: Explain Pizza Size
+  condition:
+  - active_loop: pizza_order_form
+  steps:
+  - intent: what_size_you_have
+  - action: action_pizza_size_information
   - action: pizza_order_form
   - active_loop: pizza_order_form
 
