add size details to utterance, add more deny examples for utter_anything_else

--- a/dev/data/nlu/nlu_general.yml
+++ b/dev/data/nlu/nlu_general.yml
@@ -20,6 +20,9 @@ nlu:
     - thank you, no
     - n
     - never
+    - nothing
+    - none
+    - nothing else
     - I don't think so
     - don't like that
     - no way
